# meeting_minutes_crewai

./: .gitignore  README.md  action_items.txt  pyproject.toml  sentiment.txt  summary.txt
src/meeting_minutes/: main.py
src/meeting_minutes/crews/gmailcrew/: gmailcrew.py
src/meeting_minutes/crews/gmailcrew/config/: agents.yaml  tasks.yaml
src/meeting_minutes/crews/meeting_minutes_crew/: meeting_minutes_crew.py
src/meeting_minutes/tools/: gmail_tool.py
